--- a/Resources/views/RSA/how.html.twig
+++ b/Resources/views/RSA/how.html.twig
@@ -3,7 +3,7 @@
 {% block content_header '' %}
 
 {% block content %}
-    <h3>Wieso? Weshalb? Warum?</h3>
+    <h2>Wieso? Weshalb? Warum?</h2>
     <br />
     <p>Und es ist wieder mal so weit. Ein weiteres langweiliges Projekt aus dem Informatikunterricht. Ebenso sinnlose wie seine Vorgänger. Aber gut, 15 Punkte sind nun sicher.</p>
     <p>Eines muss man diesem Projekt aber lassen: Ich konnte in PHP — Meiner Lieblingssprache — programmieren und dabei erstmals <a href="http://symfony.com/">Symfony</a> nutzen.</p>
@@ -11,7 +11,7 @@
     <p>Wie komme ich auf Symfony? Nun ja, das Content Management Framework <a href="http://zikula.org">Zikula</a> wird derzeit umgebaut, und viele selbst entwickelte Komponenten werden mit den besseren und moderneren von Symfony ersetzt.</p>
     <p>Nun könnte man sich als Lehrer natürlich fragen: <em>Was hat der denn nun selber gemacht?</em> Einfache Frage, einfache Antwort: Ich habe ein <em>Bundle</em>, eine Erweiterung, für Symfony programmiert. Unten auf dieser Seite sehen Sie den Teil des Quellcodes meiner Erweiterung, der für die eigentlichen RSA Berechnungen zuständig ist.</p>
     <p>Viel Spaß beim Testen und Verschlüsseln!</p>
-    <blockquote>Christian Flach &lt;<a href='mail&#116;o&#58;&#99;&#37;6Df%6&#51;%6D&#37;6&#54;&#46;f&#108;%61ch&#64;gma&#37;&#54;&#57;&#37;6C&#46;com'>cmf&#99;&#109;f&#46;flach&#64;gmail&#46;&#99;om</a>&gt;<br /><u>CmfcmfRSABundle</u> © Christian Flach, unter der MIT Lizenz veröffentlicht.</blockquote>
+    <blockquote>Christian Flach &lt;<a href='mail&#116;o&#58;&#99;&#37;6Df%6&#51;%6D&#37;6&#54;&#46;f&#108;%61ch&#64;gma&#37;&#54;&#57;&#37;6C&#46;com'>cmf&#99;&#109;f&#46;flach&#64;gmail&#46;&#99;om</a>&gt;<br /><a href="https://github.com/cmfcmf/RSABundle">CmfcmfRSABundle</a> © Christian Flach, unter der MIT Lizenz veröffentlicht.</blockquote>
     <style type="text/css">
         blockquote {
             margin-left: 5px !important;
